fix spark build and module issues